kpt-rst-lp21/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpt-rst-lp21-deployment
  labels:
    app: kpt-rst-lp21
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kpt-rst-lp21
  template:
    metadata:
      labels:
        app: kpt-rst-lp21
    spec:
      imagePullSecrets:
        - name: docker-config-secret
      containers:
        - name: kpt-rst-lp21-container
          resources:
            requests:
              cpu: "1000m"
              memory: 1Gi
            limits:
              cpu: "1500m"
              memory: 1Gi
          image: kpt-rst-lp21
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
