kpt-rst-lp21/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kpt-rst-lp21-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lp21.lanlabs.ch
      secretName: kpt-rst-lp21-tls-secrete
  rules:
    - host: hello.lanlabs.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpt-rst-lp21-service
                port:
                  name: http
